# clipper-homekit

./: .gitignore  pyproject.toml
clipper_homekit/: homekit_accessory.py  on_mic_status_change.py  start_server.py
src/: main.py  on_mic_status_change.py  settings.py
